<resources>
    <string name="app_name">Task3</string>
    <string name="log_in">Войти</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="create_room">Создать комнату</string>
    <string name="toolbar_profile">Профиль</string>
    <string name="toolbar_exit">Выйти из аккаунта</string>
    <string name="email">Email</string>
    <string name="registration_date">Дата регистрации</string>
    <string name="users_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="change">Изменить</string>
    <string name="loading">Загрузка…</string>
    <string name="wins">Победы</string>
    <string name="loses">Поражения</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="player_one">Игрок 1</string>
    <string name="player_two">Игрок 2</string>
    <string name="ready">Готов</string>
    <string name="statistics">Статистика</string>
    <string name="clean_statistics">Очистить статистику</string>
    <string name="game_statistics">Игровая статистика</string>
    <string name="winner">won:</string>
</resources>