<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textAlignment="center" />

            <ImageView

                android:id="@+id/yourAvatarImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="center"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/yourNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:text="@string/loading"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/yourStartGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/ready" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_two"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/enemyAvatarImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="center"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/enemyNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:text="@string/loading"
                android:textAlignment="center"
                android:textSize="14sp" />

            <Button
                android:id="@+id/enemyStartGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/ready" />
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
</LinearLayout>